--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>BuzzQuizz</h1>
     </div>
     <div class="content">
-        <div class="empty">
+        <div class="empty none">
             <p>Você não criou nenhum</p>
             <p>quizz ainda :(</p>
             <button>Criar Quizz</button>
