--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="quizz">
                     <img src="imgs/quizz.jpg" alt="">
                     <div class="gradient"></div>
-                    <h3>o quão bem você conhece Águas de Sentina</h3>
+                    <h3>Main pyke nem é gente</h3>
                 </div>
                 <div class="quizz">
                     <img src="imgs/quizz.jpg" alt="">
