Finalização da Page 2

--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -14,7 +14,9 @@
     </div>
 
     <div class="banner">
-        <h2>O quão chefe você é?</h2>
+        <h2 class="bannerText">O quão chefe você é?</h2>
+        <div class="gradient"></div>
+        <img src="/pagina2/img/exemple.jpg" class="bannerImg">
     </div>
     
     <div class="questionZone">
