--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <title>BuzzQuizz</title>
 </head>
 <body>
     <div class="top">
         <h1>BuzzQuizz</h1>
+    </div>
+    
+    <div class="banner none">
+
     </div>
     <div class="content">
         <div class="empty none">
@@ -25,12 +30,12 @@
             </div>
  
             <div class="yourquizz">
-                <div class="quizz">
+                <div onclick="openQuizz()" class="quizz">
                     <img src="imgs/quizz.jpg" alt="">
                     <div class="gradient"></div>
                     <h3>Main pyke nem é gente</h3>
                 </div>
-                <div class="quizz">
+                <div onclick="openQuizz()" class="quizz">
                     <img src="imgs/quizz.jpg" alt="">
                     <div class="gradient"></div>
                     <h3>o quão bem você conhece Águas de Sentina</h3>
@@ -39,32 +44,32 @@
         </div>
         <h2>Todos os Quizzes</h2>
         <div class="generalquizz">
-            <div class="quizz">
+            <div onclick="openQuizz()" class="quizz">
                 <img src="imgs/quizz.jpg" alt="">
                 <div class="gradient"></div>
                 <h3>o quão bem você conhece Águas de Sentina</h3>
             </div>
-            <div class="quizz">
+            <div onclick="openQuizz()" class="quizz">
                 <img src="imgs/quizz.jpg" alt="">
                 <div class="gradient"></div>
                 <h3>o quão bem você conhece Águas de Sentina</h3>
             </div>
-            <div class="quizz">
+            <div onclick="openQuizz()" class="quizz">
                 <img src="imgs/quizz.jpg" alt="">
                 <div class="gradient"></div>
                 <h3>o quão bem você conhece Águas de Sentina</h3>
             </div>
-            <div class="quizz">
+            <div onclick="openQuizz()" class="quizz">
                 <img src="imgs/quizz.jpg" alt="">
                 <div class="gradient"></div>
                 <h3>o quão bem você conhece Águas de Sentina</h3>
             </div>
-            <div class="quizz">
+            <div onclick="openQuizz()" class="quizz">
                 <img src="imgs/quizz.jpg" alt="">
                 <div class="gradient"></div>
                 <h3>o quão bem você conhece Águas de Sentina</h3>
             </div>
-            <div class="quizz">
+            <div onclick="openQuizz()" class="quizz">
                 <img src="imgs/quizz.jpg" alt="">
                 <div class="gradient"></div>
                 <h3>o quão bem você conhece Águas de Sentina</h3>
@@ -73,8 +78,10 @@
         </div>
     </div>
 
+
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 <script src="page1.js"></script>
+<script src="page2.js"></script>
 </body>
 </html>
