--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
     </div>
     <div class="content">
-        <div class="empty none">
+        <div class="empty ">
             <p>Você não criou nenhum</p>
             <p>quizz ainda :(</p>
             <button>Criar Quizz</button>
         </div>
-        <div class="filled">
+        <div class="filled none">
             <div class="filledButton">
                 <h2>Seus Quizzes</h2>
                 <ion-icon name="add-circle"></ion-icon>
@@ -44,41 +44,12 @@
         </div>
         <h2>Todos os Quizzes</h2>
         <div class="generalquizz">
-            <div onclick="openQuizz()" class="quizz">
-                <img src="imgs/quizz.jpg" alt="">
-                <div class="gradient"></div>
-                <h3>o quão bem você conhece Águas de Sentina</h3>
-            </div>
-            <div onclick="openQuizz()" class="quizz">
-                <img src="imgs/quizz.jpg" alt="">
-                <div class="gradient"></div>
-                <h3>o quão bem você conhece Águas de Sentina</h3>
-            </div>
-            <div onclick="openQuizz()" class="quizz">
-                <img src="imgs/quizz.jpg" alt="">
-                <div class="gradient"></div>
-                <h3>o quão bem você conhece Águas de Sentina</h3>
-            </div>
-            <div onclick="openQuizz()" class="quizz">
-                <img src="imgs/quizz.jpg" alt="">
-                <div class="gradient"></div>
-                <h3>o quão bem você conhece Águas de Sentina</h3>
-            </div>
-            <div onclick="openQuizz()" class="quizz">
-                <img src="imgs/quizz.jpg" alt="">
-                <div class="gradient"></div>
-                <h3>o quão bem você conhece Águas de Sentina</h3>
-            </div>
-            <div onclick="openQuizz()" class="quizz">
-                <img src="imgs/quizz.jpg" alt="">
-                <div class="gradient"></div>
-                <h3>o quão bem você conhece Águas de Sentina</h3>
-            </div>
-
+           
         </div>
     </div>
 
 
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 <script src="page1.js"></script>
