--- a/pagina3/form1.html
+++ b/pagina3/form1.html
@@ -13,18 +13,20 @@
         <h1>BuzzQuizz</h1>
     </div>
 
-    <div class="beginForm">
-        <h2 class="textBeginForm">Comece pelo começo</h2>
-
-        <div class="inputFormBeginArea">
-            <input type="text" placeholder="Título do seu quizz" class="inputFormBegin">
-            <input type="text" placeholder="URL da imagem do seu quizz" class="inputFormBegin">
-            <input type="text" placeholder="Quantidade de perguntas do quizz" class="inputFormBegin">
-            <input type="text" placeholder="Quantidade de níveis de quizz" class="inputFormBegin">
-        </div>
-
-        <div class="continueQuestionsButton">
-            <p>Prosseguir para criar perguntas</p>
+    <div class="form1">
+        <div class="beginForm">
+            <h2 class="textBeginForm">Comece pelo começo</h2>
+    
+            <div class="inputFormBeginArea">
+                <input type="text" placeholder="Título do seu quizz" class="inputFormBegin">
+                <input type="text" placeholder="URL da imagem do seu quizz" class="inputFormBegin">
+                <input type="text" placeholder="Quantidade de perguntas do quizz" class="inputFormBegin">
+                <input type="text" placeholder="Quantidade de níveis de quizz" class="inputFormBegin">
+            </div>
+    
+            <div class="continueQuestionsButton">
+                <p>Prosseguir para criar perguntas</p>
+            </div>
         </div>
     </div>
 
