--- a/pagina3/form4.html
+++ b/pagina3/form4.html
@@ -13,20 +13,22 @@
         <h1>BuzzQuizz</h1>
     </div>
 
-    <div class="endQuizzCreateArea">
-        <h2 class="endQuizzCreateTittle">Seu Quizz está pronto!</h2>
-
-        <div class="endQuizzImgArea">
-            <img src="quizz.jpg" class="endQuizzImg">
-            <div class="gradient"></div>
-            <p class="endQuizzImgTittle">O quão pykeiro você é?</p>
-        </div>
-
-        <div class="acessQuizz">
-            <p>Finalizar Quizz</p>
-        </div>
-        <div class="backtoHome">
-            <p>Voltar pra home</p>
+    <div class="form4">
+        <div class="endQuizzCreateArea">
+            <h2 class="endQuizzCreateTittle">Seu Quizz está pronto!</h2>
+    
+            <div class="endQuizzImgArea">
+                <img src="quizz.jpg" class="endQuizzImg">
+                <div class="gradient"></div>
+                <p class="endQuizzImgTittle">O quão pykeiro você é?</p>
+            </div>
+    
+            <div class="acessQuizz">
+                <p>Finalizar Quizz</p>
+            </div>
+            <div class="backtoHome">
+                <p>Voltar pra home</p>
+            </div>
         </div>
     </div>
 
