Add js, iniciação do primeiro form

--- a/pagina3/form1.html
+++ b/pagina3/form1.html
@@ -18,10 +18,10 @@
             <h2 class="textBeginForm">Comece pelo começo</h2>
     
             <div class="inputFormBeginArea">
-                <input type="text" placeholder="Título do seu quizz" class="inputFormBegin">
-                <input type="text" placeholder="URL da imagem do seu quizz" class="inputFormBegin">
-                <input type="text" placeholder="Quantidade de perguntas do quizz" class="inputFormBegin">
-                <input type="text" placeholder="Quantidade de níveis de quizz" class="inputFormBegin">
+                <input type="text" placeholder="Título do seu quizz" class="inputFormBegin tittlequizzform1">
+                <input type="text" placeholder="URL da imagem do seu quizz" class="inputFormBegin urlquizzform1">
+                <input type="text" placeholder="Quantidade de perguntas do quizz" class="inputFormBegin quantquestionquizzform1"">
+                <input type="text" placeholder="Quantidade de níveis de quizz" class="inputFormBegin quantnivelquizzform1"">
             </div>
     
             <div class="continueQuestionsButton">
@@ -30,6 +30,7 @@
         </div>
     </div>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="form1.js"></script>
 </body>
 </html>
